Enhance Lasagna's recipe page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,32 @@
 
     <body>
         <h1>Lasagna</h1>
-        <a href="../index.html">Wanna go back to home?</a>
+
+        <h3>Look at this mouth-watering Lasagna, this is what your Lasagna would be looking like in just an hour!</h3>
+
+        <img src="../images/Final_Lasagna.jpg"/>
+        <h3>Description</h3>
+        <p>Lasagna is both a type of wide, flat pasta and a popular baked dish made by layering that pasta with various fillings like meat sauce, cheese, and vegetables. It's a classic Italian dish that can be found in many cuisines worldwide.</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Meat</li>
+            <li>Tomatoes</li>
+            <li>Cheese</li>
+            <li>Salt</li>
+        </ul>
+
+        <h4>Want to make it? Here is the recipe below!</h4>
+        <h3>Steps</h3>
+        <ol>
+            <li>Start by making the sauce with <Strong>meat, veggies and tomato sauce</Strong>.</li>
+            <li>Let this <strong>simmer</strong> and <Strong>boil the noodles and shred the cheeses</Strong>.</li>
+            <li>Just put them together!</li>
+            <li>Bake until <strong>golden and crispy and cheesy</strong> :D</li>
+            <li>Serve fresh!</li>
+        </ol>
+        
+        <a href="../index.html">Wanna go back home?</a>
     </body>
 
 </html>
