Add more recipes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <h1>Odin Recipes</h1>
 
         <ul>
-            <li>Here is the <a href="recipes/lasagna.html">link </a> to a recipe for <Strong>Lasagna</Strong>.</li>
+            <li><a href="recipes/lasagna.html">recipe</a> for <Strong>Lasagna</Strong>.</li>
+            <li><a href="recipes/pasta.html">recipe</a> for <Strong>Pasta</Strong>.</li>
+            <li><a href="recipes/pizza.html">recipe</a> for <Strong>Pizza</Strong>.</li>
         </ul>
     </body>
 </html>
