--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,17 +4,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Lasagna's recipe</title>
+        <title>Pizza's recipe</title>
     </head>
 
     <body>
-        <h1>Lasagna</h1>
+        <h1>Pizza</h1>
 
-        <h3>Look at this mouth-watering Lasagna, this is what your Lasagna would be looking like in just an hour!</h3>
+        <h3>Look at this mouth-watering Pizza, this is what your Pizza would be looking like in just an hour!</h3>
 
-        <img src="../images/Final_Lasagna.jpg" height="350" width="350"/>
+        <img src="../images/Final_Pizza.jpg" height="350" width="350"/>
         <h3>Description</h3>
-        <p>Lasagna is both a type of wide, flat pasta and a popular baked dish made by layering that pasta with various fillings like meat sauce, cheese, and vegetables. It's a classic Italian dish that can be found in many cuisines worldwide.</p>
+        <p>Pizza is an Italian food that was created in the Naples area, Southern Italy. It is made with different toppings. Some of the most common toppings are mozzarella (a kind of cheese), sausages, pepperoni, vegetables, tomatoes, spices and herbs and basil. These toppings are added over a piece of bread covered with sauce.</p>
 
         <h3>Ingredients</h3>
         <ul>
@@ -28,7 +28,7 @@
         <h3>Steps</h3>
         <ol>
             <li>Start by making the sauce with <Strong>meat, veggies and tomato sauce</Strong>.</li>
-            <li>Let this <strong>simmer</strong> and <Strong>boil the noodles and shred the cheeses</Strong>.</li>
+            <li>Let this <strong>simmer</strong> and <Strong>bake the base and shred the cheeses</Strong>.</li>
             <li>Just put them together!</li>
             <li>Bake until <strong>golden and crispy and cheesy</strong> :D</li>
             <li>Serve fresh!</li>
