--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Odin's Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="header">Odin Recipes</h1>
 
         <ul>
             <li><a href="recipes/lasagna.html">recipe</a> for <Strong>Lasagna</Strong>.</li>
